--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="sedans-container container">
         <div>
           <img src="images/icon-sedans.svg" alt="Sedans" />
-          <p class="type">Sedans</p>
+          <p class="type">SEDANS</p>
           <p>
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
@@ -36,7 +36,7 @@
       <div class="suvs-container container">
         <div>
           <img src="images/icon-suvs.svg" alt="SUVS" />
-          <p class="type">SUV</p>
+          <p class="type">SUVS</p>
           <p>
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
@@ -47,7 +47,7 @@
       <div class="luxury-container container">
         <div>
           <img src="images/icon-luxury.svg" alt="Luxury" />
-          <p class="type">Luxury</p>
+          <p class="type">LUXURY</p>
           <p>
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
